# robot-rl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  justfile
robot-rl/: pyproject.toml
robot-rl/conf/: config.yaml  eval_config.yaml
robot-rl/conf/env/: gymnasium_robotics.yaml  maniskill.yaml
robot-rl/conf/hyperparams/: rl-zoo.yaml
robot-rl/hyperparam/: rl-zoo.yml
robot-rl/robot_rl/: eval_robot.py  eval_sb3.py  maniskill_ppo.py  train_robot.py  train_sb3.py  visualize_env.py
robot-rl/robot_rl/envs/: __init__.py  test_env.py  wipe_env.py
scripts/: train.sh  visualize_env.sh  visualize_train.sh
